--- a/app/views/address_categories/_ticino_medium_risk_addresses.html.erb
+++ b/app/views/address_categories/_ticino_medium_risk_addresses.html.erb
@@ -9,7 +9,7 @@
     <div>
       <a href="tel:+41 79 375 37 91"><i class="fas fa-phone-alt"></i>+41 79 375 37 91</a>
       <a href="mailto:info@pat-ti.ch"><i class="fas fa-envelope"></i>info@pat-ti.ch</a>
-      <a href="https://pat-ti.ch/"  target="_blank" ><i class="fas fa-link"></i>https://pat-ti.ch/</a>
+      <a href="https://pat-ti.ch"  target="_blank" ><i class="fas fa-link"></i>https://pat-ti.ch</a>
     </div>
   </div>
 </div>
