--- a/app/views/partials/_logo.html.erb
+++ b/app/views/partials/_logo.html.erb
@@ -1,5 +1,5 @@
 <div id="logo">
   <%= link_to root_path do %>
-    <%= image_tag("logo.png", alt:"logo PAT", class: "logo") %>
+    <%= image_tag("logo.png", alt:"Logo PAT - Parents as Teachers", class: "logo") %>
   <% end %>
 </div>
