--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -5,27 +5,16 @@
   </div>
   <div id="about">
     <h2 class="major"><%= t("about_us.title") %></h2>
-    <h3>Chi siamo</h3>
-    <p>Parent as Teachers promuove lo sviluppo precoce, l’apprendimento e la salute dei bambini nella prima infanzia sostenendo e coinvolgendo i genitori e le persone di riferimento.</p>
-    <p>I genitori influenzano in maniera importante lo sviluppo e l’apprendimento del proprio bambino. Con l’aiuto del progetto PAT – Imparo con i genitori viene offerta alle famiglie l’opportunità di ricevere le informazioni e il sostegno necessari per svolgere al meglio il proprio compito.</p>
-    <h3 class="subtitle">A chi si rivolge il progetto</h3>
-    <p>Si rivolge a donne in gravidanza e famiglie con bambini tra 0 e 6 mesi al momento della segnalazione, con molteplici oneri personali , familiari, sociali o materiali.</p>
-    <p>L’obiettivo è quello di fornire un sostegno precoce alle famiglie con condizioni di partenza difficili.</p>
-    <h3 class="subtitle">Come funziona il PAT</h3>
-    <p>Il Consulente Genitoriale PAT in genere rende visita alla famiglia al proprio domicilio ogni 2 settimane per un’ora fino a quando il bambino avrà 2 o 3 anni. Viene inoltre data la possibilità di partecipare a degli incontri di gruppo.</p>
-    <p class="bold">Ulteriori informazioni sul sito: <%= link_to "https://www.pat-ti.ch", "https://www.pat-ti.ch", target: "_blank" %>
-    </p>
-    <h3 class="subtitle">Come si può partecipare al progetto</h3>
-    <p>Sia i professionisti che le famiglie stesse possono annunciarsi, telefonando al numero <%= link_to "+41 79 375 37 91", "tel:0041793753791", target: "_blank" %> o scrivendo a <%= link_to "info@pat-ti.ch", "mailto:info@pat-ti.ch", target: "_blank" %>.
-    </p>
-    <p>Se la famiglia è interessata, il coordinatore contatta la famiglia per un primo incontro (senza impegno), durante il quale espone il progetto. In caso di interesse da parte della famiglia, il Consulente Genitoriale PAT prende contatto con la famiglia e organizza almeno due incontri di ammissione (senza impegno). Solo dopo questi 3 incontri la famiglia può accedere al progetto e si impegna per almeno 2 anni.</p>
-    <p class="bold">Il progetto è volontario e gratuito per le famiglie.</p>
-    <h3 class="subtitle">Cosa dicono le famiglie di noi</h3>
-    <p class="citation">"Grazie alla mia consulente ho capito tanto di mio figlio, ma soprattutto ho conosciuto molto meglio me stessa…"</p>
-    <p class="citation">"Senza il suo aiuto e supporto avrei punito mio figlio quando non obbediva, non sapevo come gestirlo…"</p>
-    <p class="citation">"Mi ha dato tante idee di gioco, con oggetti di casa, che avrei buttato…"</p>
-    <p class="citation">"Non so se mio figlio sarebbe ancora con me,…"</p>
-    <p class="citation">"Mi ha aiutato a credere in me stesso…"</p>
+    <h3><%= t("about_us.head_title") %></h3>
+    <%= t("about_us.paragraph_1_html") %>
+    <h3 class="subtitle"><%= t("about_us.subtitle_1") %></h3>
+    <%= t("about_us.paragraph_2_html") %>
+    <h3 class="subtitle"><%= t("about_us.subtitle_3") %></h3>
+    <%= t("about_us.paragraph_3_html") %>
+    <h3 class="subtitle"><%= t("about_us.subtitle_4") %></h3>
+    <%= t("about_us.paragraph_4_html") %>
+    <h3 class="subtitle"><%= t("about_us.subtitle_5") %></h3>
+    <%= t("about_us.paragraph_5_html") %>
     <hr>
     <div class="card">
       <div class="card-body">
