--- a/app/views/address_categories/medium_risk.html.erb
+++ b/app/views/address_categories/medium_risk.html.erb
@@ -2,17 +2,26 @@
 
 <div id="main">
   <div class="close-btn">
-    <%= link_to "", :back, class:"close" %>
+    <%= link_to "", address_categories_path(organization: @selected_organization), class:"close" %>
   </div>
   <div id="addresses">
     <h2 class="major"><%= t("addresses.medium_risk") %></h2>
-    <p>Secondo il punteggio dello screening fatto per questa famiglia si consiglia la prevenzione secondaria oltre a quella primaria <%= link_to "(vedi tutti contatti)", address_categories_path%>.</p>
-    <p>Il progetto PAT può intervenire in questi casi.</p>
-    <p>Voi come professionisti, che conoscete la famiglia, potete consigliarlo e chiedere ai genitori il permesso di essere contattati dal coordinatore del progetto per una presentazione a domicilio.</p>
-    <p>Se la famiglia è interessata, si svolgeranno almeno un paio di visite di ammissione cosicché la famiglia possa capire di cosa si tratta. Insieme si deciderà se proseguire con il progetto PAT oppure coinvolgere altri servizi.</p>
+    <% if @selected_organization == "ovk" %>
+      <p>Gemäß dem für diese Familie durchgeführten Screening-Score wird neben der Primärprävention (Mütter- und Väterberatung) auch eine Sekundärprävention empfohlen.</p>
+      <p>Wir empfehlen die Anmeldung zum PAT-Programm unter <a href="https://www.ovk.ch/familienbegleitung-pat/anmelden" target="_blank"> <i class="fas fa-link"></i>https://www.ovk.ch/familienbegleitung-pat/anmelden</a> oder <a href="mailto:pat.ovk@hin.ch"><i class="fas fa-envelope"></i>pat.ovk@hin.ch</a>.</p>
+      <p>Eine PAT-Elterntrainerin wird dann mit der Familie Kontakt aufnehmen.</p>
+      <p>Nach dem unverbindlichen Informationsgespräch mit der PAT-Elterntrainerin wird gemeinsam entschieden, ob das PAT-Programm geeignet ist. Ansonsten werden geeignete Empfehlungen ausgesprochen.</p>
 
-    <%= render 'address_categories/medium_risk_addresses' %>
+      <%= render 'address_categories/ovk_medium_risk_addresses' %>
+    <% else %>
+      <p>Secondo il punteggio dello screening fatto per questa famiglia si consiglia la prevenzione secondaria oltre a quella primaria (<%= link_to "vedi tutti i contatti", address_categories_path(organization: @selected_organization) %>).</p>
+      <p>Il progetto PAT può intervenire in questi casi.</p>
+      <p>Voi come professionisti, che conoscete la famiglia, potete consigliarlo e chiedere ai genitori il permesso di essere contattati dal coordinatore del progetto per una presentazione a domicilio.</p>
+      <p>Se la famiglia è interessata, si svolgeranno almeno un paio di visite di ammissione cosicché la famiglia possa capire di cosa si tratta. Insieme si deciderà se integrare il progetto PAT e/o coinvolgere altri servizi.</p>
+
+      <%= render 'address_categories/ticino_medium_risk_addresses' %>
+    <% end %>
 
   </div>
-  <%= link_to t("addresses.all_contacts"), address_categories_path, class:"btn" %>
+  <%= link_to t("addresses.all_contacts"), address_categories_path(organization: @selected_organization), class:"btn btn-default" %>
 </div>
