--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,9 @@
 <footer id="footer">
-  <p class="copyright">&copy; by
-    <%= link_to "PAT Ticino", "https://www.pat-ti.ch", target: "_blank" %>
+  <p class="copyright">&copy;
+    <% if @ovk_iframe %>
+      <%= link_to "by PAT für Familien", "https://www.ovk.ch/familienbegleitung-pat/familien/", target: "_blank" %>
+    <% else %>
+      <%= link_to "by PAT Ticino", "https://www.pat-ti.ch", target: "_blank" %>
+    <% end %>
   </p>
 </footer>
