--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="<%= I18n.locale %>">
   <head>
     <meta charset="UTF-8">
     <meta name="turbolinks-cache-control" content="no-cache">
@@ -13,8 +13,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <meta name="description" content="PAT Parents as Teachers questionnaire">
-    <meta name="author" content="PAT - Parents as Teachers - Imparo Con I Genitori Ticino">
+    <meta name="description" content="<%= t("meta.description") %>">
+    <meta name="author" content="<%= t("meta.author") %>">
     <%= stylesheet_link_tag 'site', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
 
