--- a/app/views/static_pages/question_2.html.erb
+++ b/app/views/static_pages/question_2.html.erb
@@ -6,24 +6,24 @@
     <%= render 'partials/logo' %>
     <div class="content">
       <div class="inner">
-        <h2>Quanto si sente sicuro/a della sua valutazione?</h1>
+        <h2><%= t("question_2.question") %></h1>
       </div>
     </div>
     <div id="controls" class="rating">
       <div class="control-link">
-        <%= link_to "Molto insicura", screening_path(val_1: @val_1, val_2: 1) %>
+        <%= link_to t("question_2.very_unsure"), screening_path(val_1: @val_1, val_2: 1) %>
       </div>
       <div class="control-link">
-        <%= link_to "Insicura", screening_path(val_1: @val_1, val_2: 2) %>
+        <%= link_to t("question_2.unsure"), screening_path(val_1: @val_1, val_2: 2) %>
       </div>
       <div class="control-link">
-        <%= link_to "Poco sicuro", screening_path(val_1: @val_1, val_2: 3) %>
+        <%= link_to t("question_2.little_sure"), screening_path(val_1: @val_1, val_2: 3) %>
       </div>
       <div class="control-link">
-        <%= link_to "Sicuro", screening_path(val_1: @val_1, val_2: 4) %>
+        <%= link_to t("question_2.sure"), screening_path(val_1: @val_1, val_2: 4) %>
       </div>
       <div class="control-link">
-        <%= link_to "Molto sicuro", screening_path(val_1: @val_1, val_2: 5) %>
+        <%= link_to t("question_2.very_sure"), screening_path(val_1: @val_1, val_2: 5) %>
       </div>
     </div>
   </div>
