--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -11,8 +11,10 @@
     </button>
     <div class="dropdown-menu dropdown-menu-right">
       <%= link_to t("quicklinks.all_contacts"), address_categories_path(organization: @selected_organization), class:"dropdown-item", type:"button" %>
-      <%= link_to t("quicklinks.about_us"), about_path, class:"dropdown-item", type:"button" %>
+      <% if I18n.locale == "de" %>
+        <%= link_to t("quicklinks.about_us"), about_path, class:"dropdown-item", type:"button" %>
       <div class="dropdown-divider"></div>
+      <% end %>
       <%= link_to "Home", root_path, class:"dropdown-item", type:"button" %>
     </div>
   <% end %>
