--- a/app/views/layouts/_language_switcher.html.erb
+++ b/app/views/layouts/_language_switcher.html.erb
@@ -1,4 +1,4 @@
-<% if @show_language_switch && @new_feature %>
+<% if @show_language_switch %>
   <div id="language-switcher">
     <a class="btn btn-sm dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
       <%= "#{I18n.locale.upcase}" %>
