--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -357,6 +357,14 @@ button, [type="button"], [type="reset"], [type="submit"] {
   padding-left: 0;
   min-height: 3.5rem;
   display: table;
+  .svg-logo {
+    background-image: url( '../images/ovk-logo-inverted.svg' );
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    width: 100%;
+    height: 60px;
+    margin: 5px 0;
+  }
 }
 
 #menu #controls .control-link:first-child {
@@ -521,6 +529,7 @@ body.preload #menu .content .inner {
   a {
     text-decoration: underline dotted;
     color: #b7c221;
+    display: inline-block;
     i {
       font-size: 0.8rem;
     }
@@ -576,18 +585,18 @@ body.preload #menu .content .inner {
 
   .btn-default {
     font-weight: 400;
-    font-size: 1.2rem;
+    font-size: 0.9rem;
     text-transform: uppercase;
     letter-spacing: 0.1rem;
     cursor: pointer;
-    padding: 10px 25px;
+    padding: 15px;
     margin-top: 30px;
-    margin-bottom: 15px;
     transition: all 0.5s ease 0s;
     color: #5a6268;
     text-decoration: none;
     border: 1px solid #b7c221;
     border-radius: 0;
+    width: 100%;
     &:hover {
       background-color: #b7c221;
       cursor: pointer;
