--- a/app/views/address_categories/high_risk.html.erb
+++ b/app/views/address_categories/high_risk.html.erb
@@ -7,7 +7,13 @@
   <div id="addresses">
     <h2 class="major"><%= t("addresses.high_risk") %></h2>
     <% if @selected_organization == "ovk" %>
-      <p>Entsprechend dem Screening-Score dieser Familie wird eine Tertiärprävention empfohlen. Bitte wenden Sie sich je nach Wohnort an die Mütter- und Väterberatung des Ostschweizer Vereins für das Kind OVK (<a href="https://www.ovk.ch/beratung/beratungsstellen" target="_blank"><i class="fas fa-link"></i>https://www.ovk.ch/beratung/beratungsstellen</a>) oder an die Mütter- und Väterberatung Untertoggenburg, Wil, Gossau (<a href="https://www.mutter-vater-beratung.ch/beratungsorte" target="_blank"><i class="fas fa-link"></i>https://www.mutter-vater-beratung.ch/beratungsorte</a>).</p>
+      <p>Gemäß dem für diese Familie durchgeführten Screening-Score wird nebst der Primärprävention (Mütter- und Väterberatung) auch eine Tertiärprävention empfohlen.</p>
+      <p>Die Belastungsfaktoren sind zahlreich und eine gesunde Entwicklung des/Ihres Kindes könnte gefährdet sein.</p>
+      <p>In diesen Fällen kann die Familienbegleitung PAT zusammen mit der Primärprävention und einem vorhandenen oder im familiären Umfeld geschaffenen Netzwerk zur Anwendung kommen.</p>
+      <p>Wir empfehlen die Anmeldung zur Familienbegleitung PAT unter <a href="https://www.ovk.ch/familienbegleitung-pat/anmelden" target="_blank"><i class="fas fa-link"></i>https://www.ovk.ch/familienbegleitung-pat/anmelden</a> oder <a href="mailto:pat.ovk@hin.ch"><i class="fas fa-envelope"></i>pat.ovk@hin.ch</a>.</p>
+      <p>Eine PAT-Elterntrainerin wird dann mit der Familie Kontakt aufnehmen und in zwei bis drei Gesprächen zusammen mit den Eltern eine Bedarfseinschätzung vornehmen.</p>
+
+        <%= render 'address_categories/ovk_medium_risk_addresses' %>
     <% else %>
       <p>Secondo il punteggio dello screening fatto per questa famiglia si consiglia la prevenzione terziaria oltre a quella primaria (<%= link_to "vedi tutti i contatti", address_categories_path(organization: @selected_organization) %>).</p>
       <p>I fattori di stress sono numerosi, uno sviluppo sano del loro bambino potrebbe essere compromesso.</p>
@@ -19,5 +25,12 @@
       <%= render 'address_categories/ticino_high_risk_addresses' %>
     <% end %>
   </div>
-  <%= link_to t("addresses.all_contacts"), address_categories_path(organization: @selected_organization), class:"btn btn-default" %>
+   <div class="row">
+    <div class="col-xs-12 col-md-6">
+      <%= link_to t("addresses.all_contacts"), address_categories_path(organization: @selected_organization), class:"btn btn-default" %>
+    </div>
+    <div class="col-xs-12 col-md-6">
+      <%= link_to t("addresses.medium_risk"), medium_risk_path(organization: @selected_organization), class:"btn btn-default" %>
+    </div>
+  </div>
 </div>
