--- a/app/views/address_categories/index.html.erb
+++ b/app/views/address_categories/index.html.erb
@@ -5,16 +5,18 @@
 
 <div id="menu">
   <%= render 'partials/logo' %>
-  <% if @new_feature %>
-    <div id="controls" class="nav">
-      <div class="control-link <%= @selected_ovk %>">
-        <%= link_to t("addresses.ovk"), address_categories_path(organization: "ovk") %>
-      </div>
-      <div class="control-link <%= @selected_ti %>">
-        <%= link_to t("addresses.ticino"), address_categories_path(organization: "ti") %>
-      </div>
+
+  <div id="controls" class="nav">
+    <div class="control-link <%= @selected_ovk %>">
+      <%= link_to address_categories_path(organization: "ovk") do %>
+        <div class="svg-logo"></div>
+      <% end %>
     </div>
-  <% end %>
+    <div class="control-link <%= @selected_ti %>">
+      <%= link_to t("addresses.ticino"), address_categories_path(organization: "ti") %>
+    </div>
+  </div>
+
   <div class="content">
     <div class="inner">
       <% if @selected_organization == "ovk" %>
