--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -39,7 +39,11 @@
           </div>
         </div>
       <% end %>
-      <%= submit_tag(t("continue"), class:"btn btn-default") %>
+      <div class="row justify-content-center">
+        <div class="col-xs-12 col-md-6">
+          <%= submit_tag(t("continue"), class:"btn btn-default") %>
+        </div>
+      </div>
     <% end %>
    </div>
 </div>
