--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -132,7 +132,7 @@ h1 {
   line-height: 1.4;
   letter-spacing: 1px;
   &.major {
-    font-size: 40px;
+    font-size: 32px;
   }
 }
 
@@ -331,15 +331,15 @@ button, [type="button"], [type="reset"], [type="submit"] {
   list-style: none;
   padding-left: 0;
   border: solid 1px #b7c221;
-}
-#menu #controls.rating {
-  border: 0;
-  background: linear-gradient(to right, #E9EEBD 10%, #04968D 100%);
-  .control-link {
+  &.rating {
     border: 0;
-    border-left: solid 1px #E9EEBD;
-    a {
-      color: #5a6268;
+    background: linear-gradient(to right, #E9EEBD 10%, #04968D 100%);
+    .control-link {
+      border: 0;
+      border-left: solid 1px #E9EEBD;
+      a {
+        color: #5a6268;
+      }
     }
   }
 }
@@ -368,6 +368,7 @@ button, [type="button"], [type="reset"], [type="submit"] {
   .logo-link {
     height: 40px;
     margin-bottom: 5px;
+
   }
   .logo-link-text {
     display: block;
@@ -510,6 +511,9 @@ body.preload #menu .content .inner {
     width: 100%;
     min-width: 17rem;
     max-width: 17rem;
+    .logo-link {
+      padding-top: 5px;
+    }
   }
 }
 
