--- a/app/views/address_categories/_ovk_medium_risk_addresses.html.erb
+++ b/app/views/address_categories/_ovk_medium_risk_addresses.html.erb
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-body">
-    <h6 class="card-subtitle mb-2 text-muted">Familienbegleitung PAT</h6>
+    <h6 class="card-subtitle mb-2 text-muted"><%= t("prevention.ovk.address_title") %></h6>
     <div>
       <p class="card-text">Rosenbergstrasse 82</p>
       <p class="card-text">9000 St. Gallen</p>
