--- a/app/views/address_categories/high_risk.html.erb
+++ b/app/views/address_categories/high_risk.html.erb
@@ -1,26 +1,28 @@
 <% page_heading(t("addresses.high_risk_title")) %>
 
 <div id="main">
+  <div class="header-logo">
+    <div class="logo-ovk <%= @selected_ovk %>">
+        <div class="svg-logo"></div>
+    </div>
+    <div class="logo-ti <%= @selected_ti %>">
+      <%= image_tag("logo-pat.png", alt:"Logo PAT - Ticion", class: "logo-link") %>
+      <span class="logo-link-text">PAT Ticino</span>
+    </div>
+  </div>
+  <div id="quicklinks-overlay">
+    <%= render 'layouts/language_switcher' %>
+  </div>
   <div class="close-btn">
     <%= link_to "", address_categories_path(organization: @selected_organization), class:"close" %>
   </div>
   <div id="addresses">
     <h2 class="major"><%= t("addresses.high_risk") %></h2>
     <% if @selected_organization == "ovk" %>
-      <p>Gemäß dem für diese Familie durchgeführten Screening-Score wird nebst der Primärprävention (Mütter- und Väterberatung) auch eine Tertiärprävention empfohlen.</p>
-      <p>Die Belastungsfaktoren sind zahlreich und eine gesunde Entwicklung des/Ihres Kindes könnte gefährdet sein.</p>
-      <p>In diesen Fällen kann die Familienbegleitung PAT zusammen mit der Primärprävention und einem vorhandenen oder im familiären Umfeld geschaffenen Netzwerk zur Anwendung kommen.</p>
-      <p>Wir empfehlen die Anmeldung zur Familienbegleitung PAT unter <a href="https://www.ovk.ch/familienbegleitung-pat/anmelden" target="_blank"><i class="fas fa-link"></i>https://www.ovk.ch/familienbegleitung-pat/anmelden</a> oder <a href="mailto:pat.ovk@hin.ch"><i class="fas fa-envelope"></i>pat.ovk@hin.ch</a>.</p>
-      <p>Eine PAT-Elterntrainerin wird dann mit der Familie Kontakt aufnehmen und in zwei bis drei Gesprächen zusammen mit den Eltern eine Bedarfseinschätzung vornehmen.</p>
-
+       <%= t("prevention.ovk.tertiary.paragraph_1_html") %>
         <%= render 'address_categories/ovk_medium_risk_addresses' %>
     <% else %>
-      <p>Secondo il punteggio dello screening fatto per questa famiglia si consiglia la prevenzione terziaria oltre a quella primaria (<%= link_to "vedi tutti i contatti", address_categories_path(organization: @selected_organization) %>).</p>
-      <p>I fattori di stress sono numerosi, uno sviluppo sano del loro bambino potrebbe essere compromesso.</p>
-      <p>Il progetto PAT può intervenire in questi casi, in collaborazione a una rete presente o da creare intorno alla famiglia.</p>
-      <p>Voi come professionisti, che conoscete la famiglia, potete consigliarlo e chiedere ai genitori il permesso di essere contattati dal coordinatore del progetto per una presentazione a domicilio.</p>
-      <p>Se la famiglia è interessata, si svolgeranno almeno un paio di visite di ammissione cosicché la famiglia possa capire di cosa si tratta. Insieme si deciderà se integrare il progetto PAT e/o coinvolgere altri servizi.</p>
-
+       <%= t("prevention.pat_ti.tertiary.paragraph_1_html", link: (link_to t("prevention.go_to_primary_prevention"), address_categories_path(organization: @selected_organization))) %>
       <%= render 'address_categories/ticino_medium_risk_addresses' %>
       <%= render 'address_categories/ticino_high_risk_addresses' %>
     <% end %>
