--- a/app/views/address_categories/medium_risk.html.erb
+++ b/app/views/address_categories/medium_risk.html.erb
@@ -1,24 +1,28 @@
 <% page_heading(t("addresses.medium_risk_title")) %>
 
 <div id="main">
+  <div class="header-logo">
+    <div class="logo-ovk <%= @selected_ovk %>">
+        <div class="svg-logo"></div>
+    </div>
+    <div class="logo-ti <%= @selected_ti %>">
+      <%= image_tag("logo-pat.png", alt:"Logo PAT - Ticion", class: "logo-link") %>
+      <span class="logo-link-text">PAT Ticino</span>
+    </div>
+  </div>
+  <div id="quicklinks-overlay">
+    <%= render 'layouts/language_switcher' %>
+  </div>
   <div class="close-btn">
     <%= link_to "", address_categories_path(organization: @selected_organization), class:"close" %>
   </div>
   <div id="addresses">
     <h2 class="major"><%= t("addresses.medium_risk") %></h2>
     <% if @selected_organization == "ovk" %>
-      <p>Gemäß dem für diese Familie durchgeführten Screening-Score wird nebst der Primärprävention (Mütter- und Väterberatung) auch eine Sekundärprävention empfohlen.</p>
-      <p>Wir empfehlen die Anmeldung zur Familienbegleitung PAT unter <a href="https://www.ovk.ch/familienbegleitung-pat/anmelden" target="_blank"> <i class="fas fa-link"></i>https://www.ovk.ch/familienbegleitung-pat/anmelden</a> oder <a href="mailto:pat.ovk@hin.ch"><i class="fas fa-envelope"></i>pat.ovk@hin.ch</a>.</p>
-      <p>Eine PAT-Elterntrainerin wird mit der Familie Kontakt aufnehmen.</p>
-      <p>Nach zwei bis drei Gesprächen mit der PAT-Elterntrainerin wird gemeinsam entschieden, ob die Familienbegleitung PAT geeignet ist.</p>
-
+      <%= t("prevention.ovk.secondary.paragraph_1_html") %>
       <%= render 'address_categories/ovk_medium_risk_addresses' %>
     <% else %>
-      <p>Secondo il punteggio dello screening fatto per questa famiglia si consiglia la prevenzione secondaria oltre a quella primaria (<%= link_to "vedi tutti i contatti", address_categories_path(organization: @selected_organization) %>).</p>
-      <p>Il progetto PAT può intervenire in questi casi.</p>
-      <p>Voi come professionisti, che conoscete la famiglia, potete consigliarlo e chiedere ai genitori il permesso di essere contattati dal coordinatore del progetto per una presentazione a domicilio.</p>
-      <p>Se la famiglia è interessata, si svolgeranno almeno un paio di visite di ammissione cosicché la famiglia possa capire di cosa si tratta. Insieme si deciderà se integrare il progetto PAT e/o coinvolgere altri servizi.</p>
-
+      <%= t("prevention.pat_ti.secondary.paragraph_1_html", link: (link_to t("prevention.go_to_primary_prevention"), address_categories_path(organization: @selected_organization))) %>
       <%= render 'address_categories/ticino_medium_risk_addresses' %>
     <% end %>
 
