Reorganisation: - Rename adress_categories to preventions - Add low_risk view, use index as overview to switch between organizations - Adjust locales - Minor style changes

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -539,10 +539,32 @@ body.preload #menu .content .inner {
   background-color: white;
   border-radius: 4px;
   margin-bottom: 2rem;
+  .btn-small {
+    font-weight: 400;
+    font-size: 0.7rem;
+    display: inline-block;
+    text-transform: uppercase;
+    letter-spacing: 0.1rem;
+    cursor: pointer;
+    padding: 12px;
+    margin-top: 20px;
+    transition: all 0.5s ease 0s;
+    color: #5a6268;
+    text-decoration: none !important;
+    border: 1px solid #b7c221;
+    border-radius: .25rem;
+    width: 100%;
+    &:hover {
+      background-color: #b7c221;
+      cursor: pointer;
+      text-decoration: none;
+      color: #04968D !important;
+    }
+  }
   a {
     text-decoration: underline dotted;
     color: #b7c221;
-    display: inline-block;
+    display: inline;
     i {
       font-size: 0.8rem;
     }
@@ -604,6 +626,7 @@ body.preload #menu .content .inner {
     font-size: 0.9rem;
     text-transform: uppercase;
     letter-spacing: 0.1rem;
+    display: inline-block;
     cursor: pointer;
     padding: 15px;
     margin-top: 30px;
@@ -724,6 +747,7 @@ a.button {
     }
     a {
       text-decoration: none;
+      display: inline-block;
     }
   }
 }
