--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -10,7 +10,7 @@
       <i class="fas fa-bars"></i>
     </button>
     <div class="dropdown-menu dropdown-menu-right">
-      <%= link_to t("quicklinks.all_contacts"), address_categories_path(organization: @selected_organization), class:"dropdown-item", type:"button" %>
+      <%= link_to t("quicklinks.all_contacts"), preventions_path(organization: @selected_organization), class:"dropdown-item", type:"button" %>
       <% if I18n.locale == :it %>
         <%= link_to t("quicklinks.about_us"), about_path, class:"dropdown-item", type:"button" %>
       <div class="dropdown-divider"></div>
