--- a/app/views/preventions/medium_risk.html.erb
+++ b/app/views/preventions/medium_risk.html.erb
@@ -22,7 +22,7 @@
       <%= t("prevention.ovk.secondary.paragraph_1_html") %>
       <%= render 'preventions/ovk_medium_risk_addresses' %>
     <% else %>
-      <%= t("prevention.pat_ti.secondary.paragraph_1_html", link: (link_to t("prevention.go_to_primary_prevention"), preventions_path(organization: @selected_organization))) %>
+      <%= t("prevention.pat_ti.secondary.paragraph_1_html", link: (link_to t("prevention.go_to_primary_prevention"), low_risk_path(organization: @selected_organization))) %>
       <%= render 'preventions/ticino_medium_risk_addresses' %>
     <% end %>
 
