--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -279,6 +279,19 @@ button, [type="button"], [type="reset"], [type="submit"] {
   height: 120px;
 }
 
+#menu .logo-ovk {
+  height: 124px;
+  width: 160px;
+  .svg-logo {
+    background-image: url( '../images/ovk-logo-inverted.svg' );
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    width: 100%;
+    height: 100%;
+    margin: 5px 0;
+  }
+}
+
 #menu .content {
   border-style: solid;
   border-color: #b7c221;
