correct total_visits

--- a/app/views/static_pages/admin.html.erb
+++ b/app/views/static_pages/admin.html.erb
@@ -4,7 +4,7 @@
   </div>
     <div id="admin">
       <h2 class="major"><%= t("admin.title") %></h2>
-      <h2 class="uppercase"><%= t("admin.subtitle") %> <%= @all_visits.count %></h2>
+      <h2 class="uppercase"><%= t("admin.subtitle") %> <%= @total_visits %></h2>
 
       <h3 class="subtitle">Last 25</h3>
       <table class="table table-striped">
