--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -781,11 +781,18 @@ a.button {
   top: 7px;
   left: 15px;
   .svg-logo {
+    display: inline-block;
     background-image: url( '../images/ovk-logo-inverted.svg' );
     background-repeat: no-repeat;
     background-size: 100% 100%;
     width: 3rem;
     height: 3rem;
+  }
+  .logo-link-de {
+    vertical-align: top;
+    height: 2.5rem;
+    margin-left: 15px;
+    margin-top: 5px;
   }
   .logo-link {
     display: inline;
