--- a/app/views/preventions/high_risk.html.erb
+++ b/app/views/preventions/high_risk.html.erb
@@ -4,9 +4,10 @@
   <div class="header-logo">
     <div class="logo-ovk <%= @selected_ovk %>">
         <div class="svg-logo"></div>
+        <%= image_tag("logo-pat-de.jpeg", alt:"Logo PAT - OVK", class: "logo-link-de") %>
     </div>
     <div class="logo-ti <%= @selected_ti %>">
-      <%= image_tag("logo-pat.png", alt:"Logo PAT - Ticion", class: "logo-link") %>
+      <%= image_tag("logo-pat.png", alt:"Logo PAT - Ticino", class: "logo-link") %>
       <span class="logo-link-text">PAT Ticino</span>
     </div>
   </div>
