--- a/app/views/preventions/index.html.erb
+++ b/app/views/preventions/index.html.erb
@@ -14,7 +14,7 @@
     </div>
     <div class="control-link <%= @selected_ti %>">
         <%= link_to preventions_path(organization: "ti") do %>
-          <%= image_tag("logo-pat.png", alt:"Logo PAT - Ticion", class: "logo-link") %>
+          <%= image_tag("logo-pat.png", alt:"Logo PAT - Ticino", class: "logo-link") %>
           <span class="logo-link-text">PAT Ticino</span>
         <% end %>
     </div>
