--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -3,7 +3,7 @@
 <div id="main">
   <div class="header-logo">
     <div class="logo-ti selected">
-      <%= image_tag("logo-pat.png", alt:"Logo PAT - Ticion", class: "logo-link") %>
+      <%= image_tag("logo-pat.png", alt:"Logo PAT - Ticino", class: "logo-link") %>
       <span class="logo-link-text">PAT Ticino</span>
     </div>
   </div>
