--- a/app/views/preventions/low_risk.html.erb
+++ b/app/views/preventions/low_risk.html.erb
@@ -4,7 +4,7 @@
   <div class="header-logo">
     <div class="logo-ovk <%= @selected_ovk %>">
         <div class="svg-logo"></div>
-        <%= image_tag("logo-pat-de.jpeg", alt:"Logo PAT - OVK", class: "logo-link-de") %>
+        <%= image_tag("logo-pat-de.jpg", alt:"Logo PAT - OVK", class: "logo-link-de") %>
     </div>
     <div class="logo-ti <%= @selected_ti %>">
       <%= image_tag("logo-pat.png", alt:"Logo PAT - Ticino", class: "logo-link") %>
