Add Impressum link

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,9 @@
 <footer id="footer">
   <p class="copyright">&copy;
     <% if @ovk_iframe %>
-      <%= link_to "by PAT für Familien", "https://www.ovk.ch/familienbegleitung-pat/familien/", target: "_blank" %>
+      <%= link_to "by OVK", "https://www.ovk.ch/familienbegleitung-pat/familien/", target: "_blank" %> | <%= link_to "Imprint", "https://www.ovk.ch/impressum-disclaimer/", target: "_blank" %>
     <% else %>
-      <%= link_to "by PAT Ticino", "https://www.pat-ti.ch", target: "_blank" %>
+      <%= link_to "by PAT Ticino", "https://www.pat-ti.ch", target: "_blank" %> | <%= link_to "Imprint", "https://www.pat-ti.ch/disclaimer", target: "_blank" %>
     <% end %>
   </p>
 </footer>
